image shadows,issues with div overlapping

--- a/styles/welcome-page.css
+++ b/styles/welcome-page.css
@@ -43,6 +43,7 @@
       display: flex;
         width: 100%; 
         height: 100%;
+        box-shadow: 5px 5px 10px black;
     }
 
     nav{
@@ -169,7 +170,7 @@
       }
 
 
-      .stars1 {
+      .stars {
         background-image:
           radial-gradient(
             1px 1px at 25px 5px, 
